[tool.poetry]
name = "doh"
version = "0.1.0"
description = "A doh client"
authors = ["qcts33 <qcthreestones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
dnspython = "^1.16"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
mypy = "^0.701.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
